Implemented Responsive text of address & changed the icons

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="unit-4 d-block">
               <div class="unit-4-icon mb-3">
-                <span class="icon-wrap"><span class="text-primary icon-shopping_basket"></span></span>
+                <span class="icon-wrap"><span class="text-primary icon-google"></span></span>
               </div>
               <div>
                 <h3>Google AdWords</h3>
@@ -188,7 +188,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
             <div class="unit-4 d-block">
               <div class="unit-4-icon mb-3">
-                <span class="icon-wrap"><span class="text-primary icon-settings_backup_restore"></span></span>
+                <span class="icon-wrap"><span class="text-primary icon-web"></span></span>
               </div>
               <div>
                 <h3>Website Development</h3>
@@ -201,7 +201,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="unit-4 d-block">
               <div class="unit-4-icon mb-3">
-                <span class="icon-wrap"><span class="text-primary icon-sentiment_satisfied"></span></span>
+                <span class="icon-wrap"><span class="text-primary icon-contact_mail"></span></span>
               </div>
               <div>
                 <h3>Professional Email</h3>
@@ -637,18 +637,18 @@
 
         <div class="row">
           <div class="col-md-7">
-            <h2>Global Marketing Solutions Office</h2>
-            <h3 class="mt-3">SCO 5, 3rd Floor,</h3>
-            <h3>Lion Tower, Gill Road</h3>
-            <h3>Pincode : 141003</h3>
-            <h3>Ludhiana</h3>
+            <h2 class="responsive-text">Global Marketing Solutions Office</h2>
+            <h3 class="mt-3 address-text">SCO 5, 3rd Floor,</h3>
+            <h3 class="address-text">Lion Tower, Gill Road</h3>
+            <h3 class="address-text">Pincode : 141003</h3>
+            <h3 class="address-text">Ludhiana</h3>
 
             <h3 class="mt-4 mobile-no">+91-98880-33025</h3>
             <h3 class="mobile-no">+91-98889-03797</h3>
           </div>
           <div class="col-md-4 ml-0">
             <a href="https://goo.gl/maps/cEgwdNPaBBVUiUde9" target="blank">
-              <img src="images/location.png"></a>
+              <img src="images/location.png" class="img-responsive w-100"></a>
           </div>
         </div>
 
