--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Global Marketing Solutions</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1 shrink-to-fit=no">
 
 
   <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
@@ -232,7 +232,7 @@
 
     <div class="feature-big">
       <div class="container">
-        <div class="row mb-5 site-section">
+        <!-- <div class="row mb-5 site-section">
           <div class="col-lg-7" data-aos="fade-right">
             <img src="images/undraw_gift_card_6ekc.svg" alt="Image" class="img-fluid">
           </div>
@@ -242,7 +242,7 @@
               experience of your Services & Brand.</p>
             <p>Compared to traditional marketing it is far easier to get feedback instantly. </p>
 
-            <!-- <div class="author-box" data-aos="fade-left">
+            <div class="author-box" data-aos="fade-left">
               <div class="d-flex mb-4">
                 <div class="mr-3">
                   <img src="images/user-png-icon-male-user-icon-512.png" alt="Image" class="img-fluid rounded-circle">
@@ -254,9 +254,9 @@
               </div>
               <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae ipsa asperiores
                 inventore aperiam iure?&rdquo;</blockquote>
-            </div> -->
+            </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- <div class="mt-5 row mb-5 site-section ">
           <div class="col-lg-7 order-1 order-lg-2" data-aos="fade-left">
@@ -310,7 +310,7 @@
           </div>
         </div> -->
 
-        <div class="mt-5 row mb-5 site-section ">
+        <div class="row mb-5 site-section " style="padding-top: 0px;">
           <div class="col-lg-7 order-1 order-lg-2" data-aos="fade-left">
             <img src="images/undraw_metrics_gtu7.svg" alt="Image" class="img-fluid">
           </div>
@@ -625,7 +625,39 @@
 
         </div>
       </div>
+
     </div> -->
+
+    <div class="feature-big">
+      <div class="container">
+        <div class="row mb-5 site-section">
+          <div class="col-lg-7" data-aos="fade-right">
+            <img src="images/undraw_gift_card_6ekc.svg" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-lg-5 pl-lg-5 ml-auto mt-md-5">
+            <h2 class="text-black">Communicate & Gather Feedback</h2>
+            <p class="mb-4">You can easily communicate with your customers through Social Media & Get their thoughts or
+              experience of your Services & Brand.</p>
+            <p>Compared to traditional marketing it is far easier to get feedback instantly. </p>
+
+            <!-- <div class="author-box" data-aos="fade-left">
+              <div class="d-flex mb-4">
+                <div class="mr-3">
+                  <img src="images/user-png-icon-male-user-icon-512.png" alt="Image" class="img-fluid rounded-circle">
+                </div>
+                <div class="mr-auto text-black">
+                  <strong class="font-weight-bold mb-0">Arjun Gupta</strong> <br>
+                  Co-Founder, Global Marketing Solutions
+                </div>
+              </div>
+              <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae ipsa asperiores
+                inventore aperiam iure?&rdquo;</blockquote>
+            </div> -->
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <div class="site-section" id="contact_us">
       <div class="container">
